Release ...
* Temporary files for here documents are now created with mode 0600.
  (They were previously created with mode 0666, which could leave them
  readable and writable by all users depending on the umask.)
* The "read" command now accepts the "-r" option (disable backslash as
  an escape character).
* The "umask" command now accepts the "-S" option (process symbolic
  mode strings).
* The code has been converted to ANSI C.
* A redefinition of the EOF macro caused the shell to hang on NetBSD.
* Various conversions from pointers to smaller integers caused the shell
  to fail on some 64-bit architectures.
* With GNU libc, multibyte characters no longer leave the word splitting
  in an inconsistent state.
* All characters are now treated as valid in single-byte locales.

Release 050614
* Initial release.